@@ -17,27 +17,60 @@
 
 @protocol WebDocumentView;
 
+/*!
+    @class WebView
+*/
 @interface WebView : NSView
 {
 @private
     WebViewPrivate *_private;
 }
 
+/*!
+    @method initWithFrame:
+    @param frame
+*/
 - initWithFrame: (NSRect) frame;
 
-// Note that the controller is not retained.
+/*!
+    @method controller
+    @discussion Note that the controller is not retained.
+*/
 - (WebController *)controller;
 
+/*!
+    @method frameScrollView
+*/
 - frameScrollView;
+
+/*!
+    @method documentView
+*/
 - (NSView <WebDocumentView> *)documentView;
 
+/*!
+    @method isDocumentHTML
+*/
 - (BOOL)isDocumentHTML;
 
+/*!
+    @method setAllowsScroling:
+    @param flag
+*/
 - (void)setAllowsScrolling: (BOOL)flag;
+
+/*!
+    @method allowsScrolling
+*/
 - (BOOL)allowsScrolling;
 
-// Extends the views that WebKit supports
-// The view must conform to the WebDocumentView protocol
+/*!
+    @method registerViewClass:forMIMEType:
+    @discussion Extends the views that WebKit supports
+    The view must conform to the WebDocumentView protocol
+    @param viewClass
+    @param MIMEType
+*/
 + (void)registerViewClass:(Class)viewClass forMIMEType:(NSString *)MIMEType;
 
 @end
